--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,9 @@ ul li {
 }
 #header.fixed {
 	background-color: #fff;
+	-webkit-box-shadow: 1px 2px 2px rgba(0,0,0,0.2);
+	-moz-box-shadow: 1px 2px 2px rgba(0,0,0,0.2);
+	box-shadow: 1px 2px 2px rgba(0,0,0,0.2);
 }
 #header.fixed .header-content {
 	border-bottom: 0;
