--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,13 @@ ul li {
 	font-weight: 700;
 	float: left;
 	text-transform: uppercase;
+	-moz-transition: color 0.3s;
+	-o-transition: color 0.3s;
+	-webkit-transition: color 0.3s;
+	transition: color 0.3s;
+}
+#header .logo:hover {
+	color: #e84545;
 }
 #header.fixed {
 	background-color: #fff;
@@ -152,9 +159,16 @@ ul li {
 	margin-left: 40px;
 	letter-spacing: 2px;
 	text-transform: uppercase;
+	-moz-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
 }
 .navigation a:hover, .navigation a.active {
 	color: #bcbcbc;
+}
+.navigation a.current-link {
+	color: #e84545;
 }
 .nav-toggle {
 	display: none;
@@ -343,56 +357,13 @@ ul li {
 	text-shadow: none;
 }
 /* ------------------------------------------------------------------------------
-	 Services
--------------------------------------------------------------------------------*/
-.services {
-	width: 100%;
-	margin: auto;
-	background-color: #f2f2f2;
-	padding: 100px 0;
-}
-.services h4 {
-	font-size: 33px;
-	line-height: 33px;
-	letter-spacing: 2px;
-	font-weight: 300;
-}
-.services h5 {
-	font-size: 21px;
-	font-weight: 300;
-	margin-bottom: 10%;
-	text-transform: none;
-}
-.services p {
-	color: #6c7279;
-	font-size: 13px;
-	font-weight: 400;
-	margin-top:16px;
-}
-.services-content {
-	margin: 50px;
-}
-.services-content li a {
-	color: #6c7279;
-	line-height: 30px;
-}
-.services-content li a:hover {
-	color: #000;
-}
-.services-content__title {
-	margin-top: 0;
-}
-.services-content__container {
-	margin-top: 55px;
-}
-/* ------------------------------------------------------------------------------
 	 Portfolio
 -------------------------------------------------------------------------------*/
 #portfolio {
 	width: 100%;
 	margin: auto;
-	padding-top: 0;
-	background: #f2f2f2;
+	padding-top: 200px;
+	/* background: #f2f2f2; */
 }
 #portfolio .portfolio-item {
 	right: 0;
@@ -408,14 +379,14 @@ ul li {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	opacity: 0;
-	background: rgba(58, 54, 54, .9);
-	-webkit-transition: all ease .5s;
-	-moz-transition: all ease .5s;
-	transition: all ease .5s;
+	opacity: 1;
+	background: rgba(43, 43, 43, 0.8);
+	-webkit-transition: all ease .3s;
+	-moz-transition: all ease .3s;
+	transition: all ease .3s;
 }
 #portfolio .portfolio-item .portfolio-link .caption:hover {
-	opacity: 1;
+	opacity: 0;
 }
 #portfolio .portfolio-item .portfolio-link .caption .caption-content {
 	position: absolute;
