--- a/css/main.css
+++ b/css/main.css
@@ -357,25 +357,25 @@ ul li {
 	text-shadow: none;
 }
 /* ------------------------------------------------------------------------------
-	 Portfolio
+	 projects
 -------------------------------------------------------------------------------*/
-#portfolio {
+#projects {
 	width: 100%;
 	margin: auto;
 	padding-top: 200px;
 	/* background: #f2f2f2; */
 }
-#portfolio .portfolio-item {
+#projects .projects-item {
 	right: 0;
 	margin: 0 0 2px;
 	padding: 0 1px;
 }
-#portfolio .portfolio-item .portfolio-link {
+#projects .projects-item .projects-link {
 	display: block;
 	position: relative;
 	margin: 0 auto;
 }
-#portfolio .portfolio-item .portfolio-link .caption {
+#projects .projects-item .projects-link .caption {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -385,10 +385,10 @@ ul li {
 	-moz-transition: all ease .3s;
 	transition: all ease .3s;
 }
-#portfolio .portfolio-item .portfolio-link .caption:hover {
+#projects .projects-item .projects-link .caption:hover {
 	opacity: 0;
 }
-#portfolio .portfolio-item .portfolio-link .caption .caption-content {
+#projects .projects-item .projects-link .caption .caption-content {
 	position: absolute;
 	top: 50%;
 	width: 100%;
@@ -398,24 +398,24 @@ ul li {
 	font-size: 20px;
 	color: #fff;
 }
-#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
+#projects .projects-item .projects-link .caption .caption-content i {
 	margin-top: -12px;
 }
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h3 {
+#projects .projects-item .projects-link .caption .caption-content h3 {
 	margin: 0;
 	color: #e9eaed;
 	font-size: 17px;
 	letter-spacing: 4px;
 	text-transform: uppercase;
 }
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
+#projects .projects-item .projects-link .caption .caption-content h4 {
 	margin: 10px 0;
 	color: #e9eaed;
 	font-size: 12px;
 	letter-spacing: 2px;
 	text-transform: uppercase;
 }
-#portfolio * {
+#projects * {
 	z-index: 2;
 }
 /* ------------------------------------------------------------------------------
@@ -495,32 +495,116 @@ ul li {
 	margin: 0 2px;
 }
 /* ------------------------------------------------------------------------------
-	 Work Detial
+	 Grid
 -------------------------------------------------------------------------------*/
 
-.work-detail {
-	width: 94%;
-	margin: auto;
+
+.d-flex {
+	display: flex;
+	position: relative;
 }
-.work-detail-margin {
-	margin-top: 7%;
+
+.d-row {
+	flex-direction: row;
 }
-.detail-image img {
-	width: 100%;
+
+.d-col {
+	flex-direction: column;
 }
-.detail-contentbox {
-	background-color: #f2f2f2;
-	padding: 3%;
+
+.d-wrap {
+	flex-wrap: wrap;
 }
-.detail-content h4 {
-	font-size: 27px;
-	line-height: 27px;
-	letter-spacing: 1px;
-	font-weight: 300;
+
+.d-center {
+	justify-content: center;
+	align-content: center;
 }
-.detail-content p {
-	color: #6c7279;
-	font-size: 13px;
-	font-weight: 400;
-	margin-top: 7%;
+
+.d-justify-center {
+	justify-content: center;
+}
+
+.d-align-center {
+	align-content: center;
+}
+
+.d-h-center {
+	justify-content: center;
+}
+
+.d-start {
+	align-content: flex-start;
+}
+
+.d-end {
+	align-content: flex-end;
+	justify-content: flex-end;
+}
+
+.d-grid-100 {
+	flex-basis: 100%;
+	padding-right: 12px;
+}
+
+.d-grid-1-4 {
+	flex-basis: 25%;
+	max-width: 25%;
+	padding-right: 12px;
+}
+.d-grid-2-4 {
+	flex-basis: 50%;
+	max-width: 50%;
+	padding-right: 12px;
+}
+.d-grid-3-4 {
+	flex-basis: 75%;
+	max-width: 75%;
+	padding-right: 12px;
+}
+
+.d-grid-1-3 {
+	flex-basis: 32%;
+	max-width: 32%;
+	padding-right: 12px;
+}
+.d-grid-2-3 {
+	flex-basis: 65%;
+	max-width: 65%;
+	padding-right: 12px;
+}
+.d-grid-3-3 {
+	flex-basis: 74%;
+	max-width: 74%;
+	padding-right: 12px;
+}
+
+.d-flex img {
+	align-self: center;
+	max-width: 100%;
+	height: auto;
+}
+
+@media (max-width: 1028px) {
+	.d-grid-2-4 {
+		flex-basis: 100%;
+		max-width: 100%;
+	}
+	.d-grid-3-4 {
+		flex-basis: 100%;
+		max-width: 100%;
+	}
+
+	.d-grid-1-3 {
+		flex-basis: 100%;
+		max-width: 100%;
+	}
+	.d-grid-2-3 {
+		flex-basis: 100%;
+		max-width: 100%;
+	}
+	.d-grid-3-3 {
+		flex-basis: 100%;
+		max-width: 100%;
+	}
 }
