--- a/css/main.css
+++ b/css/main.css
@@ -525,6 +525,10 @@ ul li {
 	justify-content: center;
 }
 
+.d-justify-end {
+	justify-content: flex-end;
+}
+
 .d-align-center {
 	align-content: center;
 }
